sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:12: error: not found: value getnombreValeurs
		if(i!=getnombreValeurs-1){
                      ^